<resources>
    <string name="app_name">Health 4 The World Stroke</string>
    <string name="lauch_text1">\"The best preparation for tomorrow is doing your best today.\"</string>
    <string name="author1">-H.jackson Brown, Jr</string>
    <string name="launch_text2">\"Believe you can and you\'re halfway there.\"</string>
    <string name="author2">-Theodore Roosevelt</string>
    <string name="launch_text3">\"Nothing is impossible, the word itself says \'I\'m possible\'!\"</string>
    <string name="author3">-Audrey Hepburn</string>
    <string name="launch_text4">\"Only I can change my life.No one can do it for me.\"</string>
    <string name="author4">-Carol Burnett</string>
    <string name="launch_text5">\"Always do your best. What you plant now will harvest later.\"</string>
    <string name="author5">-Og Mandino</string>
    <string name="launch_text6">\"Optimism is the faith that leads to achievement. Nothing can be done without hope and confidence.\"</string>
    <string name="author6">-Helen Keller</string>
    <string name="home">HOME</string>
    <string name="general_info">General Information</string>
    <string name="mobile_intro">Mobile App Introduction</string>
    <string name="para_1">"The HEALTH4THEWORLD STROKE HOPE APP is a free of cost educational tool to spread knowledge about stroke risk factors, secondary prevention, post stroke mobility &amp; exercise education and speech strategies.  It has been created by Health4TheWorld which is a non profit organization inspired by the unmet medical needs worldwide. The mission of the organization is solving health inequities through innovation &amp; technology and bringing smiles around the world. Please learn more about us at health4theworld.org."</string>
    <string name="para_2">With an estimated incidence of 16.9 million and a prevalence of 33 million according to the World Health Organization, stroke is a dominant diseased entity in the category of cardiovascular diseases, and is a leading cause of serious long-term disability. The global burden of stroke falls disproportionately on low and middle-income countries, prompting us to improve global health educational outreach. We hope that this stroke educational app will be helpful.</string>
    <string name="app_features">The app has several features that we hope you will find useful!</string>
    <string name="app_features_1">• Stroke Educational Content – Information on causes and risk factors of stroke with guidelines from the American Stroke Association, American Heart Association, evidence based articles and other healthcare sources. It is good to remember that these are general educational tips and not recommendations for clinical care. Both the patient and trained health professionals should sit together to work on a personalized prevention regimen for stroke.</string>
    <string name="app_features_2">• Video Animation and Exercise Tips for Stroke Recovery –Education for exercise and rehabilitation after stroke has been summarized by Physical Medicine and Rehabilitation experts from Stanford, University of California, San Francisco and University of Southern California. The exercises here are general and are intended to serve as educational guide not as medical advice.  These should be done with an occupational therapist and/or physical therapist, which can help with the correct technique and designing a regimen that will benefit a stroke patient best. A caregiver should always be present to help. These are divided into strengthening, stretching and functional mobility. Please advise your patients about the correct technique, frequency and regimen of these exercises.</string>
    <string name="app_features_3">• Reminders for Medications and Appointments: Medication and Appointment compliance is a major issue and this tool is hopefully helpful!  Please set reminders for your patients if possible.</string>
    <string name="app_features_4">• Speech Strategies After Stroke: The press button voice output can help with very basic communication. The aim is to translate these to different languages so health professions and patients in remote parts of the world who lack health access can benefit from these.</string>
    <string name="thanks_caps">THANK YOU</string>
    <string name="dream_team">This application wouldn’t have been possible without work of a dream team!</string>
    <string name="founders">Founders</string>
    <string name="founders_name">Dr. Bhavya Rehani, Dr. Bill Dillon &amp; Dr. Ankur Bharija</string>
    <string name="developer_ofapp">Software engineer and developer of the app</string>
    <string name="Rachel_Grau">Rachel Grau</string>
    <string name="Varun_Raj">Varun Raj</string>
    <string name="Animations">Animations</string>
    <string name="Animator_name">by Ernesto Aguilar</string>
    <string name="Illustrations">Illustrations</string>
    <string name="illustrations_by">by Julie Kim, Bhavya Rehani, Ankur Bharija</string>
    <string name="Content_Editing">Content Editing</string>
    <string name="Content_Editing_by">by Dr. Lilly Zhang, Isaiah Brown and Dr Bhavya Rehani</string>
    <string name="Movies">Movies</string>
    <string name="Movies_by">by Jack McGill</string>
    <string name="advisory_board_of_app">Medical Advisory Board for the App</string>
    <string name="advisory_board_of_app_1">Dr. Marc Fisher:  Dr Fisher currently serves as editor-in-chief of Stroke and Senior Physician on the Stroke Service at BIDMC, Harvard Medical School. He is well renowned and has published extensively over 260 peer-reviewed articles and has edited or co-edited 13 books.</string>
    <string name="advisory_board_of_app_2">Dr. Jeffrey Teraoke: Dr. Teraoke is Chief, PM &amp;R at Palo Alto VA Medical Center. He is the program director of PM&amp;R Residency Program and Director, Polytrauma, VA Palo Alto Health System</string>
    <string name="advisory_board_of_app_3">Dr. Erica A Pitsch, PT, MPT, DPT, NCS: Health Science Assistant Clinical Professor, UCSF. Dr. Pitsch specializes in neurologic physical therapy and uses several treatment strategies and approaches, all focused on promoting optimal challenge, function, and recovery in persons with neurologic illness</string>
    <string name="advisory_board_of_app_4">Loren Ward, PT, DPT is licensed Physical Therapist who began her career in Physical Therapy in 2007, while earning her Doctorate at MGH Institute of Health Professions in Massachusetts. She did internships at Rehabilitation of Chicago, Spaulding Rehabilitation and National Rehabilitation Hospital and now works at Stanford Veteran’s Affairs System. Loren is an advocate of functional independence and strives to help her patients reach their own level of independence regardless of their limitations.</string>
    <string name="advisory_board_of_app_5">Rose Hamm, PT, DPT, CWS, FACCWS: Rose received a BS in Physical Therapy from the University of North Carolina, Chapel Hill, and an MS and post-graduate DPT from the University of Southern California.  She is currently Adjunct Assistant Professor of Clinical Physical Therapy at the University of Southern California and practices at Keck Hospital at USC.</string>
    <string name="help_me_speak">Help me speak</string>
    <string name="video">Exercises</string>
    <string name="exercise_activity_text_pt1">Stop if it causes pain. Do these exercises gently.</string>
    <string name="exercise_activity_text_pt2">The body and brain like symmetry so whatever you do to the "good side" do exactly the same to the involved side.</string>
    <string name="exercise_activity_text_pt3">If you are a patient, do these under supervision of a trained health professional first time to get right training for you and your family member and to prevent injuries. We don\'t want you to be injured so be careful!.</string>
    <string name="exercise_activity_text_pt4">Each given exercise requires an individual judgement and approach, and this application is intended only for educational purposes, and is not intended to be, and should not be interpreted as, medical advice. Nothing contained in any part of this application, creates or has created or is intended to create, implicitly or explicitly, any manner of patient-physician relationship. We hope you find this educational content helpful to learn how to improve mobility after a life changing event like stroke.</string>
    <string name="exercise_activity_text_pt5">Ask your health professionals which of these would work best for you and if any modifications are needed.</string>
    <string name="Strengthening">Strengthening</string>
    <string name="Legs">Legs</string>
    <string name="Toe">Toe</string>
    <string name="Knee">Knee</string>
    <string name="Hip">Hip</string>
    <string name="Arms">Arms</string>
    <string name="Elbow">Elbow</string>
    <string name="Shoulder">Shoulder</string>
    <string name="Coordination">Coordination</string>
    <string name="Leg_1">Leg 1</string>
    <string name="Leg_2">Leg 2</string>
    <string name="Stretching">Stretching</string>
    <string name="Leg_Feet">Leg &amp; Feet</string>
    <string name="Adductores">Adductores</string>
    <string name="Adductors_text">You can do this exercise lying down or sitting in a stable chair. Lying on your back, slide the affected leg out to the side for 30 seconds and back in. Repeat 3 times.</string>
    <string name="Hamstrings">Hamstrings</string>
    <string name="Hamstrings_text">You can do this exercise lying down or sitting in a stable chair. Lie down on your back with your knees bent and straighten the knee upwards towards the sky for 30 seconds.</string>
    <string name="Dorsiflexors">Dorsiflexors</string>
    <string name="Dorsiflexors_text">You can do this exercise lying down or sitting in a stable chair. Push the foot upwards towards torso and hold for 30 sec. Repeat 3 times.</string>
    <string name="Arms_Hands">Arms &amp; Hands</string>
    <string name="Hand_Stretch">Hand Stretch</string>
    <string name="Hand_Stretch_text">Side lying with the involved side up and arm resting on the hip. Support the elbow on the hip but use your other hand to move the wrist up and away from the stomach. Bring the wrist back to its resting position. Support the wrist with one hand and try to open the fingers with the other hand. Progress to trying to open the hand when the wrist is moved up and away from the stomach. Hold the stretch for 30 seconds. Repeat 3 times.</string>
    <string name="Shoulder_Stretches">Shoulder Stretches</string>
    <string name="Shoulder_Stretches_text">Lie on your side with involved arm resting on hip. Bring shoulder up towards the ear and then gently back down.</string>
    <string name="Arm_Stretch">Arm Stretch</string>
    <string name="Arm_Stretch_text">Lie on your side with the involved side up and arm resting on hip. Gently bring the lower arm towards the leg. Hold for 30 seconds. Repeat 3 times. Make sure that you hold the shoulder and stop it from moving forward.</string>
    <string name="Function_Mobility">Function Mobility</string>
    <string name="Bridge_hip">Bridge hip</string>
    <string name="Arm_trunk">Arm + trunk</string>
    <string name="Sittostand">Sit to stand</string>
    <string name="Mind_exercise">Mind exercise</string>
    <string name="learn">Learn</string>
    <string name="topic">Topics:</string>
    <string name="RISK_FACTOR">Risk Factors</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="signs">Signs Of Stroke</string>
    <string name="befast_line2">• Balance:Sudden loss</string>
    <string name="survey">Surveys</string>
    <string name="survey1">Post Health Literacy Survey</string>
    <string name="survey2">Follow Up Survey</string>
    <string name="survey3">Usability Scale</string>
    <string name="survey4">Pre Health Literacy Survey</string>
    <string name="here_are_some_general_instructions">Here are some general instructions</string>
</resources>