<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rachelgrau.rachel.health4theworldstroke.Activities.LearnActivity">

    <!--Toolbar-->
    <android.support.v7.widget.Toolbar
        style="@style/ToolBarStyle"
        android:id="@+id/learn_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        tools:layout_editor_absoluteX="8dp" >

        <TextView
            style="@style/ToolBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/signs"/>


    <!--ListView-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/B"
            android:layout_weight="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="B"
            android:onClick="onClick"
            android:textColor="@color/darkGray"
            android:layout_margin="5dp"
            android:background="@drawable/round_learn"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/E"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/round_learn_ring"
            android:text="E"
            android:onClick="onClick"
            android:textColor="@color/red"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/F"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/round_learn_ring"
            android:padding="10dp"
            android:text="F"
            android:onClick="onClick"
            android:textColor="@color/red"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/A"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="A"
            android:onClick="onClick"
            android:layout_margin="5dp"
            android:textColor="@color/red"
            android:background="@drawable/round_learn_ring"
            android:textSize="40sp"/>
        <TextView
            android:id="@+id/S"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="S"
            android:onClick="onClick"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textColor="@color/red"
            android:background="@drawable/round_learn_ring"
            android:textSize="40sp"/>
        <TextView
            android:id="@+id/T"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="T"
            android:onClick="onClick"
            android:textColor="@color/red"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:background="@drawable/round_learn_ring"
            android:textSize="40sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/inputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/befast_line2"
        android:layout_margin="5dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/topic"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="30sp"
        android:background="@color/gray"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/learn_content_list_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/learn_toolbar"
        android:elevation="0dp">
    </ListView>

</LinearLayout>
