<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_strength"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner"
                android:onClick="onClick"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/Strengthening"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <com.rachelgrau.rachel.health4theworldstroke.Views.RoundImageView
                    android:id="@+id/strengthButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/strengthing" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_stretch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner"
                android:onClick="onClick"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"

                    android:text="@string/Stretching"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <com.rachelgrau.rachel.health4theworldstroke.Views.RoundImageView
                    android:id="@+id/stretchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/streching" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner"
                android:onClick="onClick"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/Function_Mobility"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <com.rachelgrau.rachel.health4theworldstroke.Views.RoundImageView
                    android:id="@+id/functionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/functional_mobility" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mind"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner"
                android:onClick="onClick"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"

                    android:text="@string/Mind_exercise"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <com.rachelgrau.rachel.health4theworldstroke.Views.RoundImageView
                    android:id="@+id/mindButtton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/mindexercise" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/here_are_some_general_instructions"
            android:textColor="@color/darkestGray"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="@color/darkGray" />
    </LinearLayout>
</ScrollView>
